@@ -12,10 +12,13 @@
 #    include "ScriptEngine.h"
 
 #    include "../PlatformEnvironment.h"
+#    include "../actions/BannerPlaceAction.h"
 #    include "../actions/CustomAction.h"
 #    include "../actions/GameAction.h"
+#    include "../actions/LargeSceneryPlaceAction.h"
 #    include "../actions/RideCreateAction.h"
 #    include "../actions/StaffHireNewAction.h"
+#    include "../actions/WallPlaceAction.h"
 #    include "../config/Config.h"
 #    include "../core/EnumMap.hpp"
 #    include "../core/File.h"
@@ -1221,6 +1224,26 @@ DukValue ScriptEngine::GameActionResultToDuk(const GameAction& action, const Gam
                 obj.Set("peep", actionResult.StaffEntityId.ToUnderlying());
             }
         }
+    }
+    // BannerPlaceAction, LargeSceneryPlaceAction, WallPlaceAction
+    auto bannerId = BannerIndex::GetNull();
+    switch (action.GetType())
+    {
+        case GameCommand::PlaceBanner:
+            bannerId = result.GetData<BannerPlaceActionResult>().bannerId;
+            break;
+        case GameCommand::PlaceLargeScenery:
+            bannerId = result.GetData<LargeSceneryPlaceActionResult>().bannerId;
+            break;
+        case GameCommand::PlaceWall:
+            bannerId = result.GetData<WallPlaceActionResult>().BannerId;
+            break;
+        default:
+            break;
+    }
+    if (!bannerId.IsNull())
+    {
+        obj.Set("bannerIndex", bannerId.ToUnderlying());
     }
 
     return obj.Take();
